
    o	Within Rgui, completion can be turned on or off from the 'Misc'
	menu, and if completion is on, file name completion can be
	turned off (or back on again).

	The list of possible completions is removed once any further
	key is pressed.

    o	The "Paste commands only" context menu is slightly better at
	recognizing and removing prompts, e.g. from example() output
	or debug sessions.

	
OTHERS

    o	file.access() has been rewritten using Win32 functions and
	should be more reliable, particularly on NT-based versions of
	Windows.  (PR#7234)

    o	The version number of the installer now includes the SVN
	revision number (which is handy for R-patched and R-devel
	daily builds).


BUG FIXES

    o	unlink() was not accepting wildcards.

    o	Since Windows will not unlink the current working directory,
	we change working directories before clearing the session
	temporary directory.

    o	The PDF version of the 'R Internals' manual was missing its
	indices.

    o	Rcmd BATCH did not accept input file paths with spaces in
	2.5.0.  (PR#9652)

    o	R_LIBS_SITE and R_LIBS_USER did not accept paths on network
	shares (starting \\).  (Rcmd INSTALL will not work with
	libraries on network shares, however.)



		CHANGES IN R VERSION 2.5.0

GUI CHANGES

    o	In MDI mode there is a new View menu when the console is in
	focus which allows the toolbar and statusbar to be
	(de)selected, with the initial settings taken from the
	Rconsole file as before.  The default setting for the
	statusbar has been changed to 'no', as it is barely used by
	default.

    o	There is a new menu item in Rgui to 'Stop all computations'
	which kills all R computations immediately, skips any on.exit
	conditions and returns to the command prompt.

    o	The 'Install packages ...' menu item now only installs essential
	dependencies ('Depends' and 'Imports' but not 'Suggests'),
	using install.packages(dependencies = NA).

    o	The 'save as' file dialogs from the 'File' menu in a graphics